cmake_minimum_required(VERSION 3.22)
project(Data_Structures C)

set(CMAKE_C_STANDARD 11)

add_executable(Data_Structures
        Linked_List/Q1_A_LL.c
        Linked_List/Q2_A_LL.c
        Linked_List/Q3_A_LL.c
        Linked_List/Q4_A_LL.c
        Linked_List/Q5_A_LL.c
        Linked_List/Q6_A_LL.c
        Linked_List/Q7_A_LL.c
        Stack_and_Queue/Q1_C_SQ.c
)
