cmake_minimum_required(VERSION 3.22)
project(Data_Structures C)

set(CMAKE_C_STANDARD 11)

add_executable(Data_Structures
        Linked_List/Q1_A_LL.c
        Linked_List/Q2_A_LL.c
        Linked_List/Q3_A_LL.c
        Linked_List/Q4_A_LL.c
        Linked_List/Q5_A_LL.c
        Linked_List/Q6_A_LL.c
        Linked_List/Q7_A_LL.c
        Stack_and_Queue/Q1_C_SQ.c
        Stack_and_Queue/Q2_C_SQ.c
        Stack_and_Queue/Q3_C_SQ.c
        Stack_and_Queue/Q4_C_SQ.c
        Stack_and_Queue/Q5_C_SQ.c
        Stack_and_Queue/Q6_C_SQ.c
        Stack_and_Queue/Q7_C_SQ.c
        Binary_Tree/Q1_E_BT.c
        Binary_Tree/Q2_E_BT.c
        Binary_Tree/Q3_E_BT.c
        Binary_Tree/Q4_E_BT.c
        Binary_Tree/Q5_E_BT.c
)
